--- a/metal/roles/nvidia-container-runtime/tasks/main.yml
+++ b/metal/roles/nvidia-container-runtime/tasks/main.yml
@@ -28,3 +28,9 @@
       - nvidia-utils-535-server
     update_cache: true
   notify: restart server
+
+- name: Disable nvidia-fabricmanager
+  ansible.builtin.systemd:
+    name: nvidia-fabricmanager
+    enabled: false
+    state: stopped
