web-os-renew: Fix secret key

--- a/apps/web-os-renew/templates/cronjob.yaml
+++ b/apps/web-os-renew/templates/cronjob.yaml
@@ -17,7 +17,7 @@ spec:
                 valuefrom:
                   secretKeyRef:
                     name: web-os-dev-session
-                    key: sessionToken
+                    key: token
             command:
             - curl
             - https://developer.lge.com/secure/ResetDevModeSession.dev?sessionToken=${SESSION_TOKEN}
