web-os-renew: Fix key case

--- a/apps/web-os-renew/templates/cronjob.yaml
+++ b/apps/web-os-renew/templates/cronjob.yaml
@@ -14,7 +14,7 @@ spec:
             imagePullPolicy: IfNotPresent
             env:
               - name: SESSION_TOKEN
-                valuefrom:
+                valueFrom:
                   secretKeyRef:
                     name: web-os-dev-session
                     key: token
