--- a/apps/web-os-renew/templates/cronjob.yaml
+++ b/apps/web-os-renew/templates/cronjob.yaml
@@ -19,8 +19,7 @@ spec:
                     name: web-os-dev-session
                     key: token
             command:
-              - echo
-              - curl
-              - https://developer.lge.com/secure/ResetDevModeSession.dev?sessionToken=${SESSION_TOKEN}
-              - -s
+              - bash
+              - -c
+              - curl -s https://developer.lge.com/secure/ResetDevModeSession.dev?sessionToken=${SESSION_TOKEN}
           restartPolicy: OnFailure
