--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -127,11 +127,7 @@ argo-cd:
 
   repoServer:
     autoscaling:
-      enabled: true
-      minReplicas: 1
-      maxReplicas: 5
-      targetCPUUtilizationPercentage: 150
-      targetMemoryUtilizationPercentage: 90
+      enabled: false
     resources:
       requests:
         cpu: 1
