web-os-renew: Add grep and error or success message

--- a/apps/web-os-renew/templates/cronjob.yaml
+++ b/apps/web-os-renew/templates/cronjob.yaml
@@ -21,5 +21,8 @@ spec:
             command:
               - sh
               - -c
-              - curl -s https://developer.lge.com/secure/ResetDevModeSession.dev?sessionToken=${SESSION_TOKEN}
+              - |
+                curl -s https://developer.lge.com/secure/ResetDevModeSession.dev?sessionToken=${SESSION_TOKEN} \
+                  | grep success && echo "Session token renewed" \
+                  || echo "Failed to renew session token"
           restartPolicy: OnFailure
