--- a/system/loki/values.yaml
+++ b/system/loki/values.yaml
@@ -19,8 +19,15 @@ loki:
           period: 24h
           prefix: loki_index_
         object_store: filesystem
-        schema: v13
+        schema: v12
         store: boltdb-shipper
+      - from: "2024-04-16"
+        index:
+          period: 24h
+          prefix: loki_index_
+        object_store: filesystem
+        schema: v13
+        store: tsdb
 
   auth_enabled: false
 
