--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -98,8 +98,8 @@ app-template:
       ports:
         http:
           port: 3001
-    machine-learning:
-      controller: machine-learning
+    ml:
+      controller: ml
       ports:
         http:
           port: 3003
