immich: Fix verbose type

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -21,7 +21,8 @@ app-template:
           env: &env
             DB_PORT: "5432"
             ENABLE_MAPBOX: "true"
-            LOG_LEVEL: info
+            # "LOG_LEVEL" must be one of [verbose, debug, log, warn, error, fatal]
+            LOG_LEVEL: log
             NODE_ENV: "production"
             REDIS_HOSTNAME: immich-redis
             REDIS_PORT: "6379"
