--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -40,7 +40,7 @@ app-template:
                 secretKeyRef:
                   name: immich.immich-postgres.credentials.postgresql.acid.zalan.do
                   key: password
-            DB_URL: postgresql://$(A_REPLACE_DB_USERNAME):$(A_REPLACE_DB_PASSOWRD)@$(A_REPLACE_DB_HOSTNAME):5432/$(A_REPLACE_DB_DTABASE_NAME)?sslmode=no-verify
+            DB_URL: postgresql://$(A_REPLACE_DB_USERNAME):$(A_REPLACE_DB_PASSWORD)@$(A_REPLACE_DB_HOSTNAME):5432/$(A_REPLACE_DB_DATABASE_NAME)?sslmode=no-verify
             IMMICH_METRICS: true
           envFrom: &envFrom
             - secretRef:
