immich: Fix postgres extensions definitions schema

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -43,6 +43,6 @@ spec:
   preparedDatabases:
     immich:
       extensions:
-        cube: immich
-        earthdistance: immich
-        vectors: immich
+        cube: public
+        earthdistance: public
+        vectors: public
