immich: Change extensions to data schema

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -43,6 +43,6 @@ spec:
   preparedDatabases:
     immich:
       extensions:
-        cube: public
-        earthdistance: public
-        vectors: public
+        cube: data
+        earthdistance: data
+        vectors: data
