immich: Change database extensions schema

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -43,6 +43,5 @@ spec:
   preparedDatabases:
     immich:
       extensions:
-        cube: data
-        earthdistance: data
-        vectors: data
+        cube: public
+        earthdistance: public
