immich: Change again to data schema

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -43,5 +43,5 @@ spec:
   preparedDatabases:
     immich:
       extensions:
-        cube: public
-        earthdistance: public
+        cube: data
+        earthdistance: data
