--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -66,7 +66,9 @@ app-template:
           command: /bin/sh
           args:
             - ./start-microservices.sh
-          env: *env
+          env:
+            <<: *env
+            TZ: Europe/Madrid
           envFrom: *envFrom
           resources:
             requests:
