immich: Add matplotlib emptyDir

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -203,6 +203,7 @@ app-template:
         ml:
           main:
             - path: /cache
+            - path: /.config/matplotlib
 
   serviceMonitor:
     server:
