--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -78,8 +78,8 @@ app-template:
               cpu: 10m
               memory: 128Mi
             limits:
-              cpu: 500m
-              memory: 256Mi
+              cpu: "5"
+              memory: 10Gi
               nvidia.com/gpu: "1"
           probes: *probes
     ml:
@@ -96,8 +96,8 @@ app-template:
           envFrom: *envFrom
           resources:
             requests:
-              cpu: 10m
-              memory: 128Mi
+              cpu: 300m
+              memory: 1Gi
             limits:
               cpu: "4"
               memory: 10Gi
