immich: Increase postgres resources

--- a/apps/immich/templates/postgresql.yaml
+++ b/apps/immich/templates/postgresql.yaml
@@ -14,8 +14,8 @@ spec:
       cpu: 10m
       memory: 128Mi
     limits:
-      cpu: "1"
-      memory: 256Mi
+      cpu: "10"
+      memory: 10Gi
 
   volume:
     size: 1.5Gi
