immich: Add GPU as request resource

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -78,6 +78,7 @@ app-template:
             requests:
               cpu: 10m
               memory: 128Mi
+              nvidia.com/gpu: "1"
             limits:
               cpu: "10"
               memory: 20Gi
@@ -101,6 +102,7 @@ app-template:
             requests:
               cpu: 300m
               memory: 1Gi
+              nvidia.com/gpu: "1"
             limits:
               cpu: "4"
               memory: 10Gi
