immich: Add envar MPLCONFIGDIR

--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -97,6 +97,7 @@ app-template:
           env:
             <<: *env
             NVIDIA_VISIBLE_DEVICES: all
+            MPLCONFIGDIR: /.config/matplotlib
           envFrom: *envFrom
           resources:
             requests:
