velero: Remove quotes from config

--- a/platform/velero/templates/external-secret.yaml
+++ b/platform/velero/templates/external-secret.yaml
@@ -15,7 +15,7 @@ spec:
         cloud: |-
           [default]
           aws_access_key_id=velero
-          aws_secret_access_key={{`"{{ .password }}"`}}
+          aws_secret_access_key={{`{{ .password }}`}}
   data:
     - secretKey: password
       remoteRef:
