metal: Add more variables for ntpsec

--- a/metal/inventory/host_vars/prusik.yml
+++ b/metal/inventory/host_vars/prusik.yml
@@ -1,5 +1,8 @@
 # ntp is changed by ntpsec in Ubuntu 24.04 and Debian 12
 ntp_config_file: /etc/ntpsec/ntp.conf
+ntp_package: ntpsec
+ntp_driftfile: /var/lib/ntpsec/ntp.drift
+ntp_daemon: ntpsec
 
 k3s_kubelet_extra_args:
   - kube-reserved=cpu=0.5,memory=1Gi,ephemeral-storage=1Gi
