ingress-nginx: Increase memory limits to 2Gi

--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -25,7 +25,7 @@ ingress-nginx:
     resources:
       limits:
         cpu: "2"
-        memory: 328Mi
+        memory: 2Gi
       requests:
         cpu: 40m
         memory: 150Mi
