root: Ignore differences in storage class params for PVCs

--- a/bootstrap/root/values.yaml
+++ b/bootstrap/root/values.yaml
@@ -25,3 +25,11 @@ stacks:
           - /data/tls.key
   - name: platform
   - name: apps
+    ignoreDifferences:
+      - group: ''
+        kind: PersistentVolumeClaim
+        name: '*'
+        jsonPointers:
+          - /spec/volumeMode
+          - /spec/volumeName
+          - /spec/storageClassName
