--- a/bootstrap/root/values.yaml
+++ b/bootstrap/root/values.yaml
@@ -26,7 +26,7 @@ stacks:
   - name: platform
   - name: apps
     ignoreDifferences:
-      - group: ''
+      - group: '*'
         kind: PersistentVolumeClaim
         jsonPointers:
           - /spec/volumeMode
