zfs-localpv: Add retain to backup storage class

--- a/system/zfs-localpv/templates/storage-class-backup.yaml
+++ b/system/zfs-localpv/templates/storage-class-backup.yaml
@@ -15,3 +15,4 @@ allowedTopologies:
           - k8s-amd64-1
 # with this we will take into account the k8s scheduler instead of CapacityWeighted (default) or VolumeWeighted.
 volumeBindingMode: WaitForFirstConsumer
+reclaimPolicy: Retain
