--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -145,7 +145,7 @@ app-template:
       fsGroupChangePolicy: "OnRootMismatch"
 
     nodeSelector:
-      name: grigri
+      kubernetes.io/hostname: prusik
 
   persistence:
     config:
