--- a/apps/unpackerr/values.yaml
+++ b/apps/unpackerr/values.yaml
@@ -64,7 +64,7 @@ app-template:
       fsGroupChangePolicy: "OnRootMismatch"
 
     nodeSelector:
-      name: grigri
+      kubernetes.io/hostname: prusik
 
   persistence:
     peliculas-download:
