--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -93,7 +93,7 @@ app-template:
       fsGroupChangePolicy: "OnRootMismatch"
 
     nodeSelector:
-      name: grigri
+      kubernetes.io/hostname: prusik
 
   persistence:
     config:
