--- a/apps/radarr/values.yaml
+++ b/apps/radarr/values.yaml
@@ -86,7 +86,7 @@ app-template:
       fsGroupChangePolicy: "OnRootMismatch"
 
     nodeSelector:
-      name: grigri
+      kubernetes.io/hostname: prusik
 
   persistence:
     config:
