kured: Add timeout

--- a/system/kured/values.yaml
+++ b/system/kured/values.yaml
@@ -13,5 +13,11 @@ kured:
     endTime: "8:00"
     timeZone: Europe/Madrid
     rebootCommand: "/usr/bin/systemctl reboot"
+    # time in seconds given to each pod to terminate gracefully, if negative, the default value specified in the pod will be used (default: -1)
+    drainGracePeriod: "180"
+    # when time is greater than zero, skip waiting for the pods whose deletion timestamp is older than N seconds while draining a node (default: 0)
+    skipWaitForDeleteTimeout: "200"
+    # timeout after which the drain is aborted (default: 0, infinite time)
+    drainTimeout: "361s"
     # avoid tuesday and wednesday because long running backups can be running
     rebootDays: [mo, th, fr, sa, su]
