--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -11,7 +11,7 @@ app-template:
         kanidmd:
           image:
             repository: kanidm/server
-            tag: 1.1.0-rc.16
+            tag: 1.2.0
 
           resources:
             requests:
