argocd: Change status badge enable to bool

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -39,7 +39,7 @@ argo-cd:
       # Disable git polling
       timeout.reconciliation: "0"
 
-      statusbadge.enabled: "true"
+      statusbadge.enabled: true
       # The health assessement of argoproj.io/Application CRD has been removed in argocd 1.8
       # (see https://github.com/argoproj/argo-cd/issues/3781 for more information)
       # You might need to restore it if you are using app-of-apps pattern and orchestrating
