minio: Add node selector to grigri

--- a/platform/minio/values.yaml
+++ b/platform/minio/values.yaml
@@ -52,6 +52,9 @@ minio:
           - *hostMC
         secretName: mc-s3-tls-certificate
 
+  nodeSelector:
+    kubernetes.io/hostname: grigri
+
   resources:
     requests:
       memory: 2
