metal: Remove odroid c4 and k8s-amd64-1

--- a/metal/inventory/hosts.ini
+++ b/metal/inventory/hosts.ini
@@ -3,7 +3,7 @@ grigri
 
 [kube_node:children]
 amd64_node
-odroid_c4
+# odroid_c4
 odroid_hc4
 # rock64
 
@@ -22,9 +22,9 @@ grigri
 [ipmi]
 prusik-ipmi
 
-[odroid_c4]
-k8s-odroid-c4-1
-k8s-odroid-c4-2
+# [odroid_c4]
+# k8s-odroid-c4-1
+# k8s-odroid-c4-2
 
 [odroid_hc4]
 k8s-odroid-hc4-3
