--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -97,6 +97,10 @@ app-template:
                       operator: In
                       values:
                         - home-assistant
+                    - key: app.kubernetes.io/component
+                      operator: In
+                      values:
+                        - hass
                 topologyKey: kubernetes.io/hostname
 
     whisper:
