hass: Add affinity rules to valetudopng

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -222,7 +222,8 @@ app-template:
               spec:
                 failureThreshold: 30
                 periodSeconds: 5
-
+      pod:
+        affinity: *affinity
   defaultPodOptions:
     terminationGracePeriodSeconds: 1
 
