--- a/platform/velero/templates/cross-backup/external-secret.yaml
+++ b/platform/velero/templates/cross-backup/external-secret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        cloud: |-
+        rclone.conf: |-
           [s3.internal.grigri.cloud]
           type = s3
           provider = Minio
