velero: Change affinity rules by nodeSelector in cross-backup cronjob

--- a/platform/velero/templates/cross-backup/cronjob.yaml
+++ b/platform/velero/templates/cross-backup/cronjob.yaml
@@ -27,16 +27,8 @@ spec:
               mountPath: /config
               subPath: rclone.conf
           restartPolicy: OnFailure
-          affinity:
-            podAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - "minio"
-                topologyKey: "kubernetes.io/hostname"
+          nodeSelector:
+            kubernetes.io/hostname: grigri
           securityContext:
             runAsNonRoot: true
             runAsUser: 1000
