velero: Add workaround for small files in cross-backup

--- a/platform/velero/templates/cross-backup/external-secret.yaml
+++ b/platform/velero/templates/cross-backup/external-secret.yaml
@@ -28,6 +28,8 @@ spec:
           secret_access_key = {{`{{ .secret_access_key }}`}}
           endpoint = {{`{{ .endpoint }}`}}
           acl = private
+          # md5 encrypted hash differ for small files: https://github.com/rclone/rclone/issues/1824
+          upload_cutoff = 0
 
           [secret-cross-backup]
           type = crypt
